z-index fix for gutter (needs to sit above new scroll-shadow element)

--- a/wp-content/themes/blankslate/css/main.css
+++ b/wp-content/themes/blankslate/css/main.css
@@ -740,6 +740,7 @@ h2 {
   background-position: 50%;
 
   position: relative;
+  z-index: 1;
 }
 
 .gutter.gutter-horizontal {
